--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.15.0
   cloud_firestore: ^4.13.3
+  firebase_core: ^2.24.0
+  firebase_analytics: ^10.7.2
 
 dev_dependencies:
   flutter_test:
