--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.13.3
   firebase_core: ^2.24.0
   firebase_analytics: ^10.7.2
+  firebase_storage: ^11.5.3
 
 dev_dependencies:
   flutter_test:
